Text Edit & Styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ const props = Astro.props;
     class="bg-gray-50 antialiased transition-colors duration-500 dark:bg-gray-700 text-gray-600 dark:text-gray-50"
   >
     <nav
-      class="sticky top-0 z-50 flex justify-between mx-auto font-Futurewave bg-gradient-nav px-1 sm:px-8 py-2 sm:py-4"
+      class="sticky top-0 z-50 flex justify-between mx-auto font-Futurewave bg-gradient-nav px-1 pr-4 sm:pr-0 sm:px-8 py-2 sm:py-4"
     >
       <a href="/" class="flex justify-center space-x-3 md:justify-start">
         <h2 class="sr-only">OWDDM</h2>
@@ -186,7 +186,7 @@ const props = Astro.props;
               <a
                 href="https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/"
                 target="_blank"
-                class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4"
+                class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-white/20"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -203,7 +203,7 @@ const props = Astro.props;
               >
               <a
                 href="https://owddm.com/"
-                class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4"
+                class="flex items-center justify-center gap-3 border-2 border-current px-2 py-1 sm:px-6 sm:py-4 text-white/20"
                 target="_blank"
               >
                 <svg
@@ -540,10 +540,7 @@ const props = Astro.props;
               </p>
 
               <p class="mt-4 text-white">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem
-                modi reprehenderit vitae exercitationem aliquid dolores ullam
-                temporibus enim expedita aperiam mollitia iure consectetur dicta
-                tenetur, porro consequuntur saepe accusantium consequatur.
+                You'll gain insights into the process of creating a new website project from the ground up, all the way through deployment. Our tools of choice include the Astro.build framework, along with Tailwind CSS and HyGraph as a headless CMS.
               </p>
 
               <div
@@ -812,14 +809,14 @@ const props = Astro.props;
           </svg>
         </div>
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
-          <div class="mx-auto text-center max-w-2xl lg:mx-0">
+          <div class="mx-auto text-center max-w-2xl lg:mx-0 font-Futurewave ">
             <h2
-              class="text-xl font-bold font-Futurewave sm:text-4xl nm-convex-sky-200-sm dark:nm-flat-gray-700-lg p-6"
+              class="text-xl font-bold sm:text-4xl nm-convex-sky-200-sm dark:nm-flat-gray-700-lg p-6"
             >
               Portfolio
             </h2>
-            <p class="mt-2 text-lg leading-8">
-              Learn how to grow your business with our expert advice.
+            <p class="mt-2 text-sm leading-8">
+              Let's have a look at my awesome projects, let's go!
             </p>
           </div>
           <div
