--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -5,6 +5,7 @@ import { Icon } from "astro-icon/components";
 
 <button
   id="theme-toggle"
+  aria-label="toggle dark and light mode"
   type="button"
   class="ml-4 mb-0 sm:mb-2 justify-center items-center md:p-4 py-2 transition-colors ease-in-out hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg text-sm"
 >
