--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import DarkMode from "../components/DarkMode.astro";
 
 // Assets images
 import { Image } from "astro:assets";
-import RyuHero from "../assets/img/goldDragonRed.jpg";
+import RyuHero from "../assets/img/goldDragonRed.webp";
 import Avatar from "../assets/img/sunset.jpg";
 import Skills from "../assets/img/mushroom.svg";
 
@@ -158,7 +158,7 @@ const props = Astro.props;
         >
           <div class="text-grey-950">
             <div class="text-center">
-              <h2 class="font-Futurewave text-xs sm:text-xl">
+              <h1 class="font-Futurewave text-xs sm:text-xl">
                 an <span
                   class="text-sm sm:text-4xl font-extrabold font-Futurewave text-gradient-hero"
                   >OWDDM
@@ -167,12 +167,12 @@ const props = Astro.props;
                 >
                   Romano Moesa</span
                 >
-              </h2>
-              <h3
+              </h1>
+              <h2
                 class="text-gradient-hero text-sm sm:text-xl font-semibold uppercase tracking-widest sm:text-right"
               >
                 TBA March or April :2024
-              </h3>
+              </h2>
               <p
                 class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base"
               >
@@ -264,11 +264,11 @@ const props = Astro.props;
           <div class="mx-auto max-w-2xl lg:text-center px-6 lg:px-0">
             <div class="p-0 sm:p-10 lg:flex-auto">
               <div class="mt-10 flex items-center gap-x-4">
-                <h4
+                <h3
                   class="flex-none text-sm font-semibold leading-6 font-Futurewave"
                 >
                   Pre-Requirements
-                </h4>
+                </h3>
                 <div class="h-px flex-auto bg-sky-500"></div>
               </div>
               <ul
@@ -368,11 +368,11 @@ const props = Astro.props;
 
         <div class="p-8 sm:p-10 lg:flex-auto">
           <div class="mt-10 flex items-center gap-x-4">
-            <h4
+            <h3
               class="flex-none text-sm font-semibold leading-6 font-Futurewave"
             >
               Topics
-            </h4>
+            </h3>
             <div class="h-px flex-auto bg-sky-500"></div>
           </div>
           <ul
