Resized & Converted: Image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import DarkMode from "../components/DarkMode.astro";
 // Assets images
 import { Image } from "astro:assets";
 import RyuHero from "../assets/img/goldDragonRed.webp";
-import Avatar from "../assets/img/sunset.jpg";
+import Avatar from "../assets/img/sunset.webp";
 import Skills from "../assets/img/mushroom.svg";
 
 const { site } = Astro;
