Crop: Avatar Image

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import RyuHero from "../assets/img/goldDragonRed.webp";
-import Avatar from "../assets/img/sunset.webp";
+import Avatar from "../assets/img/sunset-crop.webp";
 
 const props = Astro.props;
 ---
