--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,8 +19,20 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
   >
     <div
-      class="flex flex-col-reverse lg:flex-row items-center gap-12 px-0 sm:px-6"
+      class="flex flex-col lg:flex-row items-center gap-12 px-0 sm:px-6"
     >
+          <div id="avatar">
+        <div class="overflow-hidden">
+          <Image
+            src={Avatar}
+            alt="Selfie"
+            loading="eager"
+            class="rounded-full w-52 h-52 sm:w-80 sm:h-80 md:ml-10 mb-10"
+            width={1280}
+            height={853}
+          />
+        </div>
+      </div>
       <div class="text-grey-950">
         <div class="text-center">
           <h1
@@ -89,18 +101,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
           </a>
         </div>
       </div>
-      <div id="hero">
-        <div class="overflow-hidden">
-          <Image
-            src={Avatar}
-            alt="Selfie"
-            loading="eager"
-            class="rounded-full w-52 h-52 sm:w-80 sm:h-80 md:ml-10 mb-10"
-            width={1280}
-            height={853}
-          />
-        </div>
-      </div>
+
     </div>
   </div>
 </section>
