Configuration: Aspect-ratio images

--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -48,7 +48,7 @@ import { Icon } from "astro-icon/components";
         class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-sky-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3"
       >
         <div
-          class="m-3 px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
+          class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
         >
           <article class="flex max-w-xl flex-col items-start justify-between">
             <div class="flex items-center gap-x-4 text-xs font-Futurewave">
@@ -97,7 +97,7 @@ import { Icon } from "astro-icon/components";
 
         <!-- More posts... -->
         <div
-          class="m-3 px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
+          class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
         >
           <article class="flex max-w-xl flex-col items-start justify-between">
             <div class="flex items-center gap-x-4 text-xs font-Futurewave">
@@ -144,7 +144,7 @@ import { Icon } from "astro-icon/components";
           </article>
         </div>
         <div
-          class="m-3 px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
+          class="px-3 pb-12 pt-3 nm-flat-sky-100-lg hover:nm-flat-stone-100-lg dark:nm-flat-gray-700-lg dark:hover:dark:nm-flat-gray-800-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full"
         >
           <article class="flex max-w-xl flex-col items-start justify-between">
             <div class="flex items-center gap-x-4 text-xs font-Futurewave">
