--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,13 +7,12 @@ const props = Astro.props;
 const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
-<section id="hero" class="h-full">
+<section id="hero" class="h-full w-auto aspect-w-16 aspect-h-9">
   <Image
     src={RyuHero}
     alt="Hero image - An Asian golden dragon"
     loading="eager"
     class="absolute object-cover h-screen"
-    sizes={sizes}
   />
   <div
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
@@ -88,13 +87,12 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
         </div>
       </div>
       <div id="avatar">
-        <div class="overflow-hidden">
+        <div class="overflow-hidden aspect-w-1 aspect-h-1 md:aspect-w-16 md:aspect-h-9 lg:aspect-w-4 lg:aspect-h-3">
           <Image
             src={Avatar}
             alt="Selfie"
             loading="eager"
             class="rounded-full w-60 h-60 sm:w-72 sm:h-72"
-            sizes={sizes}
           />
         </div>
       </div>
