--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,12 +7,13 @@ const props = Astro.props;
 const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 ---
 
-<section id="hero" class="h-full w-auto aspect-w-16 aspect-h-9">
+<section id="hero" class="h-full aspect-w-16 aspect-h-9">
   <Image
     src={RyuHero}
     alt="Hero image - An Asian golden dragon"
     loading="eager"
     class="absolute object-cover h-screen"
+    sizes={sizes}
   />
   <div
     class="relative grid h-screen place-items-center bg-red-800/80 dark:bg-gray-800/90 p-6"
@@ -93,6 +94,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
             alt="Selfie"
             loading="eager"
             class="rounded-full w-60 h-60 sm:w-72 sm:h-72"
+            sizes={sizes}
           />
         </div>
       </div>
