--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
 <section id="hero" class="h-full aspect-auto">
   <Image
     src={RyuHero}
-    alt="Hero image - An Asian golden dragon"
+    alt="A magnificent Asian golden dragon encircled by crimson-gold blossoms."
     loading="eager"
     class="absolute object-cover h-screen"
     sizes={sizes}
@@ -36,7 +36,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
           <h2
             class="text-gradient-hero text-sm sm:text-xl font-semibold uppercase tracking-widest sm:text-right"
           >
-            TBA March or April :2024
+            March 23<span class="text-sm">rd </span>:2024
           </h2>
           <p
             class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base"
