--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -85,7 +85,7 @@ import { Icon } from "astro-icon/components";
                   />
                 </div>
                 <span class="self-center font-Futurewave text-xs"
-                  ><a href="#">romano moesa</a><br /><span
+                  ><a href="/me-myself-and-i">romano moesa</a><br /><span
                     class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
                     >owddm</span
                   ></span
@@ -134,7 +134,7 @@ import { Icon } from "astro-icon/components";
                   />
                 </div>
                 <span class="self-center font-Futurewave text-xs"
-                  ><a href="#">romano moesa</a><br /><span
+                  ><a href="/me-myself-and-i">romano moesa</a><br /><span
                     class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
                     >owddm</span
                   ></span
@@ -181,7 +181,7 @@ import { Icon } from "astro-icon/components";
                   />
                 </div>
                 <span class="self-center font-Futurewave text-xs"
-                  ><a href="#">romano moesa</a><br /><span
+                  ><a href="/me-myself-and-i">romano moesa</a><br /><span
                     class="text-gradient-brand font-extrabold uppercase tracking-[0.6em]"
                     >owddm</span
                   ></span
@@ -192,7 +192,7 @@ import { Icon } from "astro-icon/components";
         </div>
       </div>
       <p class="mt-8 text-right text-sm font-Futurewave">
-        <a class="text-primary" href="#"> ... check out my projects &rarr;</a>
+        <a href="/portfolio"> ... check out my projects &rarr;</a>
       </p>
     </div>
   </div>
