--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,8 +6,8 @@ import Footer from "../components/Footer.astro";
 // Fonts & Styles???
 
 const {
-  title = "OWDDM | Workshop | Osaka",
-  description = "Build a blog and portfolio in a Astro.build framework, along with Tailwind CSS and HyGraph as a headless CMS!",
+  title = "OWDDM | KWDDM | 大阪市, 日本",
+  description = "OWDDM and KWDDM are volunteer non-profit groups that organizes Meetups in Kansai | Osaka/Kyoto Web Designers and Developers",
 } = Astro.props;
 ---
 
