--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Hero from "../components/Hero.astro";
 import Notice from "../components/Notice.astro";
-import Disclaimer from "../components/Disclaimer.astro";
+import TextIntro from "../components/TextIntro.astro";
 import CTA from "../components/CTA.astro";
 import Blog from "../components/Blog.astro";
 import Portfolio from "../components/Portfolio.astro";
@@ -14,8 +14,8 @@ import Portfolio from "../components/Portfolio.astro";
 >
   <Hero />
   <Notice />
-  <Disclaimer />
-  <CTA />
   <Blog />
+  <TextIntro />
   <Portfolio />
+  <CTA />
 </MainLayout>
