--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -3,6 +3,7 @@ import { Image } from "astro:assets";
 
 import Skills from "../assets/img/mushroom.svg";
 ---
+
 <section id="CTA">
   <div class="bg-sky-200 dark:bg-sky-950">
     <section class="lg:py-12 lg:flex lg:justify-center">
@@ -11,7 +12,7 @@ import Skills from "../assets/img/mushroom.svg";
       >
         <div class="w-full px-6 py-12 lg:max-w-5xl lg:w-1/2">
           <div class="h-64 bg-cover z-40">
-            <Image src={Skills} alt="Call to action image" loading="eager" />
+            <Image src={Skills} alt="Call to Action: Skill-Up with the iconic Super Mushroom from the Mario Brothers universe!" loading="lazy" />
           </div>
         </div>
 
@@ -51,5 +52,150 @@ import Skills from "../assets/img/mushroom.svg";
         </div>
       </div>
     </section>
+  </div>
+</section>
+
+<!-- Below section you can delete if not needed or make a new component -->
+<section id="topics">
+  <div class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32">
+    <div class="p-8 sm:p-10 lg:flex-auto">
+      <div class="mt-10 flex items-center gap-x-4">
+        <h3 class="flex-none text-sm font-semibold leading-6 font-Futurewave">
+          Topics
+        </h3>
+        <div class="h-px flex-auto bg-sky-500"></div>
+      </div>
+      <ul
+        role="list"
+        class="mt-8 grid grid-cols-1 gap-4 text-sm leading-6 sm:grid-cols-3 sm:gap-6"
+      >
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Astro build setup
+        </li>
+        <li class="flex gap-x-3 line-through">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Tailwind CSS basics
+        </li>
+        <li class="flex gap-x-3 line-through">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          VS Code basics
+        </li>
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Re:factor your code
+        </li>
+        <li class="flex gap-x-3 line-through">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          SEO basics
+        </li>
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Fetch data from HyGraph
+        </li>
+        <li class="flex gap-x-3">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Netlify deployment
+        </li>
+        <li class="flex gap-x-3 line-through">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          Fetch a public API using VUE
+        </li>
+        <li class="flex gap-x-3 line-through">
+          <svg
+            class="h-6 w-5 flex-none text-sky-500"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+              clip-rule="evenodd"></path>
+          </svg>
+          DarkMode & Responsive Web Design
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
