--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@ const today = new Date();
 const props = Astro.props;
 ---
 
-<footer class="bg-gradient-nav">
+<footer class="bg-stone-400/70">
   <div
-    class="container px-6 py-8 mx-auto mt-24 font-Futurewave tracking-widest"
+    class="container px-6 py-8 mx-auto mt-24 font-Futurewave tracking-widest text-gray-800"
   >
     <div class="flex flex-col items-center text-center">
       <a href="/" class="flex justify-center space-x-3 md:justify-start">
@@ -30,11 +30,11 @@ const props = Astro.props;
 
     <div class="flex flex-col items-center sm:flex-row sm:justify-between">
       <p class="text-sm">
-        © Copyright 2024 : {today.getFullYear()}<br />All Rights Reserved.
+        © Copyright {today.getFullYear()}<br />All Rights Reserved.
       </p>
       <a
         href="https://masscom.media"
-        class="flex justify-center space-x-3 md:justify-start"
+        class="flex justify-center space-x-3 md:justify-start text-gray-800"
       >
         <div class="flex items-center justify-center">
           <Icon
@@ -54,7 +54,7 @@ const props = Astro.props;
         <a
           href="https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/"
           target="_blank"
-          class="mx-4 text-sm transition-colors duration-300"
+          class="mx-4 text-sm transition-colors duration-300 text-gray-800"
           aria-label="MeetUp"
         >
           <svg
@@ -74,7 +74,7 @@ const props = Astro.props;
         <a
           href="https://discord.com/invite/k8xj8d75f6"
           target="_blank"
-          class="mx-4 text-sm transition-colors duration-300"
+          class="mx-4 text-sm transition-colors duration-300 text-gray-800"
           aria-label="Discord"
         >
           <svg
@@ -94,7 +94,7 @@ const props = Astro.props;
         <a
           href="https://www.linkedin.com/company/owddm-kwddm/"
           target="_blank"
-          class="mx-4 text-sm transition-colors duration-300"
+          class="mx-4 text-sm transition-colors duration-300 text-gray-800"
           aria-label="LinkedIn"
         >
           <svg
