--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -25,7 +25,7 @@ const props = Astro.props;
   <div class="flex items-center justify-center">
     <ul class="flex">
       <li>
-        <a href="#blog" class="flex justify-center space-x-3 md:justify-start">
+        <a href="/#blog" class="flex justify-center space-x-3 md:justify-start text-gray-800">
           <h2 class="sr-only">Blog</h2>
           <div class="items-center justify-center block sm:hidden">
             <svg
@@ -54,7 +54,7 @@ const props = Astro.props;
       <li>
         <a
           href="#portfolio"
-          class="flex justify-center space-x-3 md:justify-start"
+          class="flex justify-center space-x-3 md:justify-start text-gray-800"
         >
           <h2 class="sr-only">Portfolio</h2>
           <div class="items-center justify-center block sm:hidden">
